feat: file upload

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ DB_PASSWORD=admin
 DB_NAME=nomedobanco
 
 JWT_SECRET_KEY=xiu_guarda_segredo
+
+MINIO_ENDPOINT="localhost"
+MINIO_PORT=9001
+MINIO_ACCESS_KEY=NDyjv8ADmfhDhnHquS7p
+MINIO_SECRET_KEY=K4fmUfX7u5mOoagss2DzqTrs4Psg9BcR4Gcu3n85
+MINIO_BUCKET=test
