feat: firebase upload image

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ MINIO_PORT=9001
 MINIO_ACCESS_KEY=NDyjv8ADmfhDhnHquS7p
 MINIO_SECRET_KEY=K4fmUfX7u5mOoagss2DzqTrs4Psg9BcR4Gcu3n85
 MINIO_BUCKET=test
+
+FIREBASE_SERVICE_ACCOUNT_JSON={}
