--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "nestjs-minio-client": "^2.1.0",
+    "firebase-admin": "^11.10.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.1",
@@ -47,6 +47,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/passport-local": "^1.0.35",
     "@types/sequelize": "^4.28.15",
