--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "migrate:create": "npx sequelize-cli migration:generate --name"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
@@ -33,8 +34,10 @@
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "bcryptjs": "^2.4.3",
+    "cache-manager": "^5.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
     "firebase-admin": "^11.10.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
