--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,6 @@ DB_PASSWORD=admin
 DB_NAME=nomedobanco
 
 JWT_SECRET_KEY=xiu_guarda_segredo
+JWT_ATTENDANCE_SECRET_KEY=chave_segura
 
 FIREBASE_SERVICE_ACCOUNT_JSON={}
